--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,19 @@
-version: 2.1
-
 jobs:
-  test:
+  build-and-test:
     docker:
-      - image: circleci/python:3.8  # Use a Python 3.8 environment
+      - image: circleci/python:3.8
     steps:
       - checkout
       - run:
           name: Install dependencies
-          command: pip install -r Terrorism_Analysis_Project/requirements.txt
+          command: pip install -r requirements.txt
+      - run:
+          name: Set PYTHONPATH
+          command: export PYTHONPATH=$PYTHONPATH:$PWD/Terrorism_Analysis_Project
       - run:
           name: Run unit tests
-          command: python -m unittest discover -s Terrorism_Analysis_Project/Tests
+          command: python -m unittest discover -s Tests
+
 workflows:
   version: 2
   test-and-build:
