--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: pip install -r requirements.txt
+          command: python -m pip install --upgrade pip && pip install -r Terrorism_Analysis_Project/requirements.txt
       - run:
           name: Set PYTHONPATH
           command: export PYTHONPATH=$PYTHONPATH:$PWD/Terrorism_Analysis_Project
       - run:
           name: Run tests
-          command: python -m unittest discover -s Tests
+          command: python -m unittest discover -s Terrorism_Analysis_Project/Tests
 
 workflows:
   version: 2
